# ducc

./: .Dockerfile.alpine  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.DISABLED  .travis.yml  CMakeLists.txt  ChangeLog  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.am  README.md  compile_dpcpp  compile_hipsycl  compile_hipsycl_cpu  compile_hipsycl_nvidia  compile_sycl_acpp_nvidia  configure.ac  cuda_test.py  cxxbase.cc  flake.nix  horner_test.cc  pyproject.toml  release_instructions.md  setup.cfg  setup.py  testnufft.py
Healpix_cxx/: healpix_base.cc  healpix_base.h  healpix_map.cc  healpix_map.h  healpix_tables.cc  healpix_tables.h
cmake/: CheckAVX.cpp
cxxsupport/: datatypes.h  error_handling.cc  misc_utils.h  string_utils.cc  string_utils.h  system.cc  timers.h  vec.h
doc/: Makefile  conf.py  fft.rst  healpix.rst  index.rst  misc.rst  nufft.rst  pointingprovider.rst  sht.rst  totalconvolve.rst  wgridder.rst
fortran/: ducc0.f90  ducc_fortran.cc
interpol_ng/: MANIFEST.in  README.md  alm.h  demo.py  interpol_ng.cc  interpol_ng.h  pyinterpol_ng.cc  setup.py  test_adjoint.py
julia/: commands  driver.c  ducc0.jl  ducc_julia.cc
libmr_util/: Makefile.am  ducc0
libmr_util/test/: hpxtest.cc  sharp2_testsuite.cc  space_filling_test.cc
libsharp2/: sharp.cc  sharp.h  sharp_almhelpers.cc  sharp_almhelpers.h  sharp_core.cc  sharp_core_inc.cc  sharp_cxx.h  sharp_geomhelpers.cc  sharp_geomhelpers.h  sharp_internal.h  sharp_mpi.cc  sharp_mpi.h  sharp_utils.cc  sharp_utils.h  sharp_vecsupport.h  sharp_ylmgen.cc  sharp_ylmgen.h  sharp_ylmgen_c.cc  sharp_ylmgen_c.h
mr_util/: aligned_array.h  compress_utils.h  constants.h  crangeset.h  error_handling.cc  error_handling.h  fft.h  fft1d.h  geom_utils.cc  geom_utils.h  gl_integrator.h  math_utils.h  mav.h  morton_utils.cc  morton_utils.h  pointing.cc  pointing.h  pybind_utils.h  rangeset.h  simd.h  space_filling.cc  space_filling.h  string_utils.cc  system.cc  threading.cc  threading.h  timers.h  unity_roots.h  useful_macros.h  vec3.h
nifty_gridder/: MANIFEST.in  gridder_cxx.h  nifty_gridder.cc  setup.py
not_yet_integrated/: compress_utils.h  crangeset.h  datatypes.h  enumerate.h  gridder_accuracy_tools.py  healpix_map.h  healpytest.py  ips4o.h  kernel_helper.py  kernel_helper_new.py  math_utils.h  mueller_convolver.py  special_add_at.cc  tofrac.c
pyHealpix/: Healpix_cxx  MANIFEST.in  pyHealpix.cc  pyHealpix_perftest.py  pyHealpix_test.py  setup.py  test.py
pyinterpol_ng/: MANIFEST.in  alm.h  demo.py  interpol_ng.h  pyinterpol_ng.cc  setup.py  usage.py
pypocketfft/: MANIFEST.in  pypocketfft.cc  setup.py  test.py
pysharp/: MANIFEST.in  demo.py  libsharp2  mr_util  pysharp.cc  setup.py  upsample_demo.py
python/: alm.h  ducc.cc  fft.cc  fft_pymod.cc  gridder_cxx.h  healpix.cc  healpix_pymod.cc  jax_pymod.cc  misc.cc  misc_pymod.cc  mpi_support.cc  nufft_pymod.cc  pointingprovider.cc  pointingprovider_pymod.cc  sht.cc  sht_pymod.cc  totalconvolve.cc  totalconvolve.h  totalconvolve2.h  totalconvolve_pymod.cc  transpose.h  wgridder.cc  wgridder_pymod.cc
rust/: Cargo.toml  README.md  build.rs  ducc_rust.cc  example_header.h
rust/benches/: fft_1d.rs
rust/src/: lib.rs  main.rs
source/: Makefile  conf.py  wgridder.rst
src/: Cargo.toml  build.rs  ducc_rust.cc  ducc_rust.h  error_handling.cc  string_utils.cc  system.cc
src/doc/: Doxyfile
src/docsrc/: mr_util.dox
src/ducc0/bindings/: array_descriptor.h  pybind_utils.h  typecode.h
src/ducc0/fft/: fft.h  fft1d.h  fft1d_impl.h  fftnd_impl.h
src/ducc0/healpix/: healpix_base.cc  healpix_base.h  healpix_tables.cc  healpix_tables.h
src/ducc0/infra/: aligned_array.h  bucket_sort.h  communication.cc  communication.h  error_handling.h  mav.cc  mav.h  misc_utils.h  newmav.h  simd.h  startup_checks.cc  string_utils.cc  string_utils.h  sycl_utils.h  system.cc  system.h  threading.cc  threading.h  timers.h  transpose.h  types.cc  types.h
src/ducc0/math/: cmplx.h  constants.h  es_kernel.h  fft.h  fft1d.h  geom_utils.cc  geom_utils.h  gl_integrator.cc  gl_integrator.h  gridding_kernel.cc  gridding_kernel.h  horner_kernel.h  least_misfit.cc  least_misfit.h  math_utils.h  mcm.h  newfft1d.h  pointing.cc  pointing.h  quaternion.h  rangeset.h  solvers.h  space_filling.cc  space_filling.h  unity_roots.h  vec3.h  wigner3j.cc  wigner3j.h
src/ducc0/not_yet_integrated/: compress_utils.h  crangeset.h  datatypes.h  healpix_map.cc  healpix_map.h  horner_kernel.h  horner_test.cc  kernel_helper.py  moc.h
src/ducc0/nufft/: nufft.h  nufft_r.h
src/ducc0/sharp/: alm.h  sharp.cc  sharp.h  sharp_almhelpers.cc  sharp_almhelpers.h  sharp_core.cc  sharp_core_inc.cc  sharp_geomhelpers.cc  sharp_geomhelpers.h  sharp_internal.h  sharp_ylmgen.cc  sht.cc  sht.h  totalconvolve.h
src/ducc0/sht/: alm.h  sharp.cc  sharp.h  sht.cc  sht.h  sht_utils.h  sphere_interpol.h  totalconvolve.h
src/ducc0/wgridder/: wgridder.cc  wgridder.h  wgridder_sycl.h
src/mr_util/: cmplx.h  error_handling.h  fft.h  gl_integrator.h  mav.h  simd.h  string_utils.h  system.h  threading.h  timers.h  vecsupport.h
src/mr_util/bindings/: pybind_utils.h
src/mr_util/healpix/: healpix_base.cc  healpix_base.h  healpix_tables.cc
src/mr_util/infra/: aligned_array.h  communication.cc  communication.h  error_handling.h  mav.h  simd.h  string_utils.cc  string_utils.h  system.cc  system.h  threading.cc  threading.h  timers.h  transpose.h  types.h  useful_macros.h
src/mr_util/math/: cmplx.h  es_kernel.h  fft.h  fft1d.h  geom_utils.cc  geom_utils.h  gl_integrator.h  math_utils.h  pointing.h  rangeset.h  space_filling.h  unity_roots.h  vec3.h
src/mr_util/not_yet_integrated/: compress_utils.h  crangeset.h  datatypes.h  healpix_map.cc  healpix_map.h  moc.h
src/mr_util/sharp/: sharp.cc  sharp.h  sharp_almhelpers.cc  sharp_almhelpers.h  sharp_core.cc  sharp_core_inc.cc  sharp_geomhelpers.cc  sharp_geomhelpers.h  sharp_internal.h  sharp_ylmgen.cc
src/src/: lib.rs  main.rs
test/: hpxtest.cc  morton_test.cc  sharp2_testsuite.cc  space_filling_test.cc  test_interpol_ng.py  test_libsharp.sh  test_pysharp.py  test_space_filling.sh
(+53 files in other folders)
