[metadata]
name = ducc0
description = Distinctly useful code collection: contains efficient algorithms for Fast Fourier (and related) transforms, spherical harmonic transforms involving very general spherical grids, gridding/degridding tools for radio interferometry, 4pi spherical convolution operators and much more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.mpcdf.mpg.de/mtr/ducc
author = Martin Reinecke
author_email = martin@mpa-garching.mpg.de
python_requires = >=3.8
license = GPLv2+
classifiers =
  Development Status :: 5 - Production/Stable
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
  Operating System :: OS Independent
  Programming Language :: C++
  Intended Audience :: Science/Research
project_urls =
  Bug Tracker = https://gitlab.mpcdf.mpg.de/mtr/ducc/issues
  Bug Tracker (Github) = https://github.com/mreineck/ducc/issues
  Documentation = https://mtr.pages.mpcdf.de/ducc
  Source Code = https://gitlab.mpcdf.mpg.de/mtr/ducc
  Source Code (Github) = https://github.com/mreineck/ducc
  README = https://gitlab.mpcdf.mpg.de/mtr/ducc/-/blob/ducc0/README.md
  Changelog = https://gitlab.mpcdf.mpg.de/mtr/ducc/-/blob/ducc0/ChangeLog


[options]
include_package_data = True
packages = 
install_requires = numpy>=1.17.0
