[package]
name = "ducc0"
description = "Wrapper around ducc0"
version = "0.28.0"
edition = "2021"
license = "GPL-2.0-or-later"
documentation = "https://gitlab.mpcdf.mpg.de/mtr/ducc"
repository = "https://gitlab.mpcdf.mpg.de/mtr/ducc"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["fft", "fast", "fourier", "transform"]

[dependencies]
num-complex = "0.4.3"
ndarray = "0.15.6"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
num = "0.4.0"
criterion = "0.4.0"
ndrustfft = "0.3.0"

[[bench]]
name = "fft_1d"
harness = false
html_reports = true
