[package]
name = "ducc0"
description = "Wrapper around ducc0"
version = "0.28.0"
edition = "2021"
license = "GPL-2.0-or-later"
documentation = "https://gitlab.mpcdf.mpg.de/mtr/ducc"
repository = "https://gitlab.mpcdf.mpg.de/mtr/ducc"
readme = "../README.md"

[dependencies]
num-complex = "0.4.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
# num = "0.4.0"
